--- a/.github/workflows/export.yaml
+++ b/.github/workflows/export.yaml
@@ -120,12 +120,16 @@ jobs:
           cp map_hashes.json "$tmp_json"
       
           # Iterate null-delimited files
+          set +x
+          count=0
           while IFS= read -r -d '' f; do
             rel="${f#./}"
             h="$(git hash-object "$f")"
             jq --arg p "$rel" --arg h "$h" '.maps[$p]=$h' "$tmp_json" > "$tmp_json.next"
             mv "$tmp_json.next" "$tmp_json"
+            count=$((count+1))
           done < "$tmp_list"
+          set -x
       
           mv "$tmp_json" map_hashes.json
       
@@ -139,54 +143,53 @@ jobs:
             ((.maps // {}) | keys | sort | .[0:20][] // empty)
           ' map_hashes.json
           echo "::endgroup::"
-      
           echo "cur_hash_file=map_hashes.json" >> "$GITHUB_OUTPUT"
-          - name: Compare map hashes and build change lists
-            id: diff
-            shell: bash
-            run: |
-              set -euo pipefail
-          
-              CUR="${{ steps.curhash.outputs.cur_hash_file }}"
-              PREV="${{ steps.prevhash.outputs.prev_hash_file }}"
-          
-              echo "::group::DEBUG current map_hashes.json ($CUR)"
-              if [ -f "$CUR" ]; then
-                echo "File size: $(stat -c%s "$CUR") bytes"
-                head -n 400 "$CUR"
-              else
-                echo "MISSING $CUR"
-              fi
-              echo "::endgroup::"
-          
-              echo "::group::DEBUG previous map_hashes.json ($PREV)"
-              if [ -n "$PREV" ] && [ -f "$PREV" ]; then
-                echo "File size: $(stat -c%s "$PREV") bytes"
-                head -n 400 "$PREV"
-              else
-                echo "MISSING $PREV"
-              fi
-              echo "::endgroup::"
-          
-              if [ -z "$PREV" ]; then
-                echo "No previous hash file, treat all as changed."
-                jq -r '.maps | keys[]' "$CUR" > changed_maps.txt
-              else
-                echo "Hash diff"
-                python .github/scripts/compare_map_hashes.py "$PREV" "$CUR" \
-                  --changed-out changed_maps.txt --summary-out hash_diff_summary.txt | tee hashdiff.out
-              fi
-          
-              echo "---- summary ----"
-              if [ -f hash_diff_summary.txt ]; then
-                cat hash_diff_summary.txt
-              else
-                echo "No summary produced"
-              fi
-          
-              echo "::group::DEBUG changed_maps.txt"
-              cat changed_maps.txt || echo "No changed maps"
-              echo "::endgroup::"
+      - name: Compare map hashes and build change lists
+        id: diff
+        shell: bash
+        run: |
+          set -euo pipefail
+      
+          CUR="${{ steps.curhash.outputs.cur_hash_file }}"
+          PREV="${{ steps.prevhash.outputs.prev_hash_file }}"
+      
+          echo "::group::DEBUG current map_hashes.json ($CUR)"
+          if [ -f "$CUR" ]; then
+            echo "File size: $(stat -c%s "$CUR") bytes"
+            head -n 400 "$CUR"
+          else
+            echo "MISSING $CUR"
+          fi
+          echo "::endgroup::"
+      
+          echo "::group::DEBUG previous map_hashes.json ($PREV)"
+          if [ -n "$PREV" ] && [ -f "$PREV" ]; then
+            echo "File size: $(stat -c%s "$PREV") bytes"
+            head -n 400 "$PREV"
+          else
+            echo "MISSING $PREV"
+          fi
+          echo "::endgroup::"
+      
+          if [ -z "$PREV" ]; then
+            echo "No previous hash file, treat all as changed."
+            jq -r '.maps | keys[]' "$CUR" > changed_maps.txt
+          else
+            echo "Hash diff"
+            python .github/scripts/compare_map_hashes.py "$PREV" "$CUR" \
+              --changed-out changed_maps.txt --summary-out hash_diff_summary.txt | tee hashdiff.out
+          fi
+      
+          echo "---- summary ----"
+          if [ -f hash_diff_summary.txt ]; then
+            cat hash_diff_summary.txt
+          else
+            echo "No summary produced"
+          fi
+      
+          echo "::group::DEBUG changed_maps.txt"
+          cat changed_maps.txt || echo "No changed maps"
+          echo "::endgroup::"
 
           # --- Compare current vs previous and build CHANGED/UNCHANGED outputs ---
           - name: Compare map hashes and build change lists
