--- a/.github/workflows/export.yaml
+++ b/.github/workflows/export.yaml
@@ -15,7 +15,7 @@ env:
   TILE_DIR: data/tiles
   S3_BUCKET: s3://aurora-webtilesbucket
   S3_PREFIX: ''
-  PUBLIC_BASE: https://aurora-webtilesbucket.s3.amazonaws.com
+  PUBLIC_BASE: https://tiles.armrha.org/
 
 jobs:
   export:
